--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,35 @@ html {
 }
 
 .hh1 {
-  font-family: 'Redressed', cursive;
-  color: brown;
+  font-family: 'Open sans';
+
+  color: black;
   text-align: center;
 }
 .imagenperro {
   width: 25vh;
+}
+
+body {
+  margin: 0;
+}
+
+/* ====================
+    Background
+=======================*/
+
+.background {
+  width: 100vw;
+  height: 100vh;
+  animation: pulse 5s infinite;
+  overflow: hidden;
+}
+
+.buttons {
+  margin-right: 70%;
+  z-index: 1;
+}
+
+.bhover:hover {
+  color: black !important;
 }
