--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
 .background {
   width: 100vw;
   height: 100vh;
-  animation: pulse 5s infinite;
+  animation: pulse 0.02s infinite;
   overflow: hidden;
 }
 
@@ -70,7 +70,7 @@ body {
 }
 
 .landingpage {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #e99c84, #e26a98, #59adcc, #63d1b7);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
