--- a/src/App.css
+++ b/src/App.css
@@ -27,12 +27,12 @@ html {
 .mapid {
   height: 480px;
   width: 1000px;
-  border: 3px solid black;
+  /* border: 3px solid black; */
 }
 .leaflet-container {
   height: 480px;
   width: 1000px;
-  border: 3px solid black;
+  /*  border: 3px solid black; */
 }
 
 .mapcontainer {
