--- a/src/App.css
+++ b/src/App.css
@@ -180,3 +180,9 @@ h4 {
 .btndanger {
   padding: 0.2rem 0.75rem !important;
 }
+
+@media (min-width: 770px) {
+  .alertsmallscreen {
+    display: none !important;
+  }
+}
